<resources>
    <string name="app_name">ClientApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_title">Trang chủ</string>
    <string name="declare_fragment_title">Sức khỏe</string>
    <string name="me_fragment_title">Hồ sơ</string>
    <string name="add">add</string>
    <string name="healthy">an toàn</string>
    <string name="format_date">%1$d-%2$d-%3$d</string>
    <string name="extra_number_format">+ %1$s</string>
    <!--    <string name=" "-->

    <string name="success_sign_up">Đăng ký thành công</string>
    <string name="success_sign_in"> Đăng nhập thành công</string>
    <string name="success_update_user"> Cập nhật user thành công</string>
    <string name="success_get_user_information"> Lấy thông tin user thành công</string>
    <string name="success_get_user_health"> Lấy thông tin sức khỏe user thành công</string>

    <string name="failure_insert_health">Khai báo sức khỏe thất bại</string>
    <string name="success_insert_health">Khai báo sức khỏe thành công</string>

    <string name="suggest_not_initial_health_history"> Hãy cập nhật sức khỏe của bạn</string>
    <string name="warning_health_history"> Bạn bị nghi nhiễm</string>
    <string name="congratulation_health_history"> Sức khỏe của bạn an toàn</string>

    <string name="notify_healthy_general_safe">Bạn đang hiện đang có sức khỏe tốt.</string>
    <string name="notify_healthy_general_unsafe">Hãy tự cách ly ở nhà chúng tôi sẽ liên hệ với bạn để hỗ trợ tư vẫn sớm nhất</string>
    <string name="notify_healthy_general_warning">Cập nhật sức khỏe để chúng tôi có thể nắm bắt tình hình sức khỏe của bạn</string>

    <string name="sign_up">Đăng ký</string>
    <string name="auth_to_login">Bạn đã có tài khoản rồi? Đăng nhập nào</string>
    <string name="string_birth">Ngày sinh</string>
    <string name="recovered_number">Bình phục</string>
    <string name="dead_number">Tử vong</string>
    <string name="case_number">Nhiễm bệnh</string>
    <string name="viet_nam">Việt Nam</string>
    <string name="world">Thế giới</string>
    <string name="thong_tin_dich_benh">Thông tin dịch bệnh</string>
    <string name="string_developing">Tính năng đang phát triển mời bạn trở lại sau !!</string>
    <string name="login">Đăng nhập</string>

    <string name="regex_phone">(09|08|01)?[0-9][0-9]{7}</string>
    <string name="regex_email">[a-zA-Z0-9._-]+@[a-z]+\\.+[a-z]+</string>

    <string name="error_required">%s không thể rỗng</string>
    <string name="error_regex_phone">Số điện thoại phải bắt đầu bằng "01", "08", "01" và có độ dài là 9</string>

    <string name="error_regex_email">Email có dạng abc@xyz.cbd</string>

    <string name="error_length_name">Họ và tên có độ dài từ 10 đến 20</string>
    <string name="error_length_address">Địa chỉ có độ dài từ 10 đến 50</string>
</resources>